--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "axios": "^1.3.6",
     "launchdarkly-js-client-sdk": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1"
   },
@@ -31,6 +34,7 @@
     "eslint-plugin-react": "^7.32.2",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
+    "terser-brunch": "^4.1.0",
     "vite": "^4.2.0"
   }
 }
